--- a/src/main/resources/templates/admin/fattorini.html
+++ b/src/main/resources/templates/admin/fattorini.html
@@ -64,9 +64,9 @@ input {
         cursor: pointer;
        }
 </style>
-
-<body>
 <header th:replace="fragments/admin.html :: header"></header>
+<body>
+
 
 <div style="text-align: center; padding-top: 50px;">
 	<table class="tabella">
@@ -83,8 +83,9 @@ input {
 		  </tr>
 		  </div>
 	</table>
-	<p><button class ="bottone" id="myBtn">Aggiungi</button></p>
+	
 </div>
+<button class ="bottone" id="myBtn">Aggiungi</button>
 
 <!-- The Modal -->
 				<div id="myModal" class="modal">
