--- a/src/main/resources/templates/registerUser.html
+++ b/src/main/resources/templates/registerUser.html
@@ -47,8 +47,8 @@ html {
             <span class="errors" th:if="${#fields.hasErrors('credentials.password')}" th:errors="${credentials.password}" ></span>
           </div>
           <div class="button_next" style="height: 45px;">
-           <label for='step2' id="continue-step2" class="continue">
-            <div style="font-size: 25px;">Continue</div>
+           <label for='step2' style="width: 100%;" id="continue-step2" class="continue">
+            <div style="font-size: 25px;text-align: center;" >Continue</div>
           </label>
         </div>
        
@@ -101,5 +101,6 @@ html {
     </div>
     
   </div>
+  <div th:replace="loginForm :: login"></div>
     </body>
 </html>
