--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,265 +1,10 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-family: 'Titillium Web', sans-serif;
-}
-html{
-    background-color: tomato;
+body{
+	 background-color: tomato!important;
+	 overflow: hidden!important;
 }
 
-.wrapper {
-  
-	width: 1800px;
-	margin: 0 auto;
-  
-}
-header {
-  	top: 0;
-	height: 70px;
-	background-color: rgba(0,0,0,.5);
-	width: 100%;
-	position: fixed;
- 
-  
-}
 .wrapper{
-  display: flex;
-  justify-content: space-between;
-  justify-content: center;
-  align-items: center;
-  margin-top: -6px;
-}
-
-.wrapper .btn img{
-    flex: 10%;
-    width: 60px;
-    height: 50px;
-}
-.wrapper .btn .b1:hover{
-  border-color: rgba(255,255,255,1);
-}
-.logo img {
-  	flex: 10%;
-    height: 90px;
-    width: 120px;
-    background-size: auto 68px;
-}
-.nav {
-	text-align: center;
-	margin-right: 160px;
-  flex: 80%;
-  font-family: 'Titillium Web', sans-serif;
-    box-sizing: border-box;
-    transition: all .35s ease;
-}
-.nav * {
-  
-    box-sizing: border-box;
-    transition: all .35s ease;
-  }
-  
-  .nav li {
-    
-    display: inline-block;
-    list-style: outside none none;
-    margin: .5em 1em;
-    padding: 0;
-  }
-  
-  .nav a {    
-    padding: .5em .8em;
-    color: rgb(255, 255, 255);
-    position: relative;
-    text-decoration: none;
-    font-size: 20px;
-
-  }
-  
-  .nav a::before,
-  .nav a::after {
-    
-    content: '';
-    height: 14px;
-    width: 14px;
-    position: absolute;
-    transition: all .35s ease;
-    opacity: 0;
-  }
-  
-  .nav a::before {
-    content: '';
-    right: 0;
-    top: 0;
-    border-top: 3px solid rgb(241, 112, 6);
-    border-right: 3px solid rgb(241, 112, 6);
-    transform: translate(-100%, 50%);
-  }
-  
-  .nav a:after {
-    content: '';
-    left: 0;
-    bottom: 0;
-    border-bottom: 3px solid rgb(241, 112, 6);
-    border-left: 3px solid rgb(241, 112, 6);
-    transform: translate(100%, -50%)
-  }
-  
-  .nav a:hover:before,
-  .nav a:hover:after{
-    transform: translate(0,0);
-    opacity: 1;
-  }
-  
-  .nav a:hover {
-    color: rgb(241, 112, 6);
-  }
-
-
-.footer {
-    position: absolute;
-  overflow: hidden;
-  background: #000000;
-  color: #d3d3d3;
-  height: 400px;
-  width: 100%;
-  bottom: 0;
-}
-
-.footer .footer-content {
-  height: 350px;
-  display: flex;
-}
-
-.footer .footer-content .footer-section {
-  flex: 1;
-  padding: 25px;
-  text-align: center;
-}
-
-.footer .footer-content h1,
-.footer .footer-content h2 {
-  font-family: 'Titillium Web', sans-serif;
-  color: rgb(255, 115, 0);
-}
-.footer .footer-content .about p {
-  padding-bottom: 15px;
-  padding-top: 20px;
-}
-.footer .footer-content .about .contact span {
-  display: block;
-  font-size: 1.1em;
-  margin-bottom: 8px;
-  padding-bottom: 15px;
-}
-
-.footer .footer-content .about .socials a {
-  border: 1px solid rgb(255, 255, 255);
-  width: 45px;
-  height: 35px;
-  padding-top: 6px;
-  text-align: center;
-  display: inline-block;
-  font-size: 1.3em;
-  border-radius: 5px;
-  transition: all .3s;
-  color: white;
-}
-
-.footer .footer-content .about .socials a:hover {
-  border: 1px solid white;
-  color: rgb(255, 153, 0);
-  transition: all .3s;
-}
-
-.footer .footer-content .links ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-.footer .footer-content .links ul a {
-  text-decoration: none;
-  display: block;
-  opacity: 0.5;
-  padding-bottom: 10px;
-  margin-bottom: 10px;
-  font-size: 1em;
-  transition: all .3s;
-  color: white;
-}
-
-.footer .footer-content .links ul a:hover {
-  color: rgb(255, 94, 0);
-  opacity: 1;
-  margin-left: 15px;
-  transition: all .3s;
-}
-
-.newsletter {
-    background-color: #000000;
-    padding: 100px 15px;
-    color: #fff;
-    text-align: center;
-}
-.newsletter h2, .newsletter p{
-  padding-top: 20px;
-  padding-bottom: 30px;
-    text-align: center;
-    line-height: 34px;
-}
-.newsletter-box {
-    margin: 20px auto;
-    display: table;
-}
-.newsletter-box i {
-    background: #f7f7f7;
-    width: 60px;
-    font-size: 16px;
-    text-align: center;
-    line-height: 40px;
-    color: #ff7300;
-    border-right: 1px solid #ddd;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    height: 42px;
-}
-.newsletter .newsletter-box button {
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background: #ff7300;
-    color: #fff;
-    padding: 0 15px;
-    font-size: 14px;
-    cursor: pointer;
-    border: 2px solid #fff;
-    border-left: 0px;
-    height: 42px;
-    margin-top: 5px;
-}
-.emailbox{
-    border: none;
-    outline: none;
-}
-.emailbox {
-    width: 0px;
-    height: 42px;
-    transition: 0.6s;
-    font-size: 16px;
-}
-.newsletter-box:hover > .emailbox, .emailbox:focus{
-    width: 280px;
-    padding: 0 10px;
-}
-
-.footer .footer-bottom {
-  background: #343a40;
-  color: #686868;
-  height: 50px;
-  width: 100%;
-  text-align: center;
-  position: inhe;
-  bottom: 0px;
-  left: 0px;
-  padding-top: 20px;
+	position: relative;
 }
 
 .PizzaForm{
@@ -346,41 +91,7 @@ header {
 	justify-content: space-evenly;
 }
 
-.add{
-	display: flex;
-	flex-wrap: wrap;
-	margin-top: 20px;
 
-}
-.add p{
-	
-	margin-left: 5px;
-	font-size: 28px;
-	font-family: 'Titillium Web', sans-serif;
-}
- .add input{
-    width: 45px; height: 40px;
-    padding-bottom: 45px;
-    border-radius: 50%; 
-    transition: box-shadow .3s;
-    background: lightgrey;
-    cursor: pointer;
-    border: 0;
-    appearance: none;
-   }
-  .add input[type="checkbox"]::after{
-	margin-top: 8px;
-       font-size: 35px;
-       content: '+';
-       color: rgb(0, 0, 0);
-  }
-  
-  .add input:checked{ 
-	
-	box-shadow: inset 0 0 0 20px #32a852;    
-    content: '+';
-    color: white;
-}
 
   .PizzaForm .format{
     width: 40%;
