--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <div class="first">
     <div class="img">
  <p class="head">PIZZA REVOLUTION</p>
- <p><span>-----</span></p>
+ <div class="line"></div>
  <P class="slogan"> Qui il vero suppli al telefono</P>
     </div>
 </div>
@@ -24,11 +24,12 @@
 <div class="first">
     <div class="img">
  <p class="head">PIZZA REVOLUTION</p>
- <p><span>-----</span></p>
+ <div class="line"></div>
  <P class="slogan"> Qui il vero suppli al telefono</P>
     </div>
 </div>
 <div class="second">
+
 <div class="row"> 
   <div class="column">
   
