--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -19,7 +19,7 @@
     <div class="modal-content">
       <div class="modal-header">
        
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: red;">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -53,6 +53,6 @@
 </div>
 
   
-
+<div th:replace="loginForm :: login"></div>
 </body>
 </html>
