--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -22,7 +22,7 @@
 			<header th:fragment="header">
 				<div class="wrapper">
 					<div class="logo">
-	                    <a th:href="@{/default}"><img  src="/images/logo2.png"/></a>
+	                    <a th:href="@{/default}"><img  src="/images/logo_pizza.png"/></a>
 					</div>
 					
 					<input type="checkbox" id="check">
