--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -22,7 +22,7 @@
 			<header th:fragment="header">
 				<div class="wrapper">
 					<div class="logo">
-	                    <a th:href="@{/index}"><img  src="images/logo2.png"/></a>
+	                    <a th:href="@{/index}"><img  src="images/logo_pizza.png"/></a>
 					</div>
 					
 					<input type="checkbox" id="check">
@@ -31,7 +31,7 @@
 	      </label>
 					  <ul class="nav">
 	                    <li><a href="#">LA PIZZA</a></li>
-	                    <li><a th:href="@{suppli}">SUPPLI</a></li>
+	                    <li><a th:href="@{/suppli}">SUPPLI</a></li>
 	                    <li><a th:href="@{menu}">MENU</a></li>
 	                    <li><a href="#">ORDINA</a></li>
 	                    <li><a th:href="@{/contattaci}">CONTATTACI</a></li>
