--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -287,6 +287,7 @@ p{
     width: 100%;
     height: 5px;
     background-color: black;
+    border-radius: 50%;
 }
 .first .img {
     font-size: 30px;
@@ -531,7 +532,7 @@ header {
 .logo img {
   
     height: 90px;
-    width: 120px;
+    width: 90px;
     background-size: auto 68px;
 }
 .nav {
@@ -918,13 +919,10 @@ header {
     
 
 .area{
-    display: flex;
-    flex-direction: column;
+ width: 100%;
 }	
 .area .immagine{
-	margin-top: 7%;
-    margin-left: 25%;
-    margin-right: 25%;
+
 }
 .area .titolo{
 	text-align: center;
