--- a/src/main/resources/templates/suppli.html
+++ b/src/main/resources/templates/suppli.html
@@ -11,8 +11,9 @@
     	<header th:replace="fragments/base.html :: header"></header>
 
         <div class="area">
-	       	<div class="immagine">
-				<img src="images/suppli.jpg">
+	       	<div class="immagine" style="position: relative;">
+				<img src="images/suppli.jpg" style="width: 100%;height: 90%;">
+				 <div class="centered"><img src="images/logo_suppli.png" style="position: absolute;top: 50%;left: 50%;  transform: translate(-50%, -50%);"></div>
 			</div>
 			<div class="titolo">
 				<h1>Il vero <i>supplì</i> al telefono</h1>
