--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -9,6 +9,9 @@
 	position: absolute;
 	bottom: 0;
 }
+html{
+	overflow: initial!important;
+}
 </style>
 <body>
 <footer th:replace="fragments/admin.html :: footer"></footer>
