--- a/src/main/resources/templates/fragments/admin.html
+++ b/src/main/resources/templates/fragments/admin.html
@@ -31,7 +31,7 @@
 	      </label>
 					  <ul class="nav">
 	                    <li><a th:href="@{/admin/fattorini}">FATTORINI</a></li>
-                    	<li><a th:href="@{/menu}">MENU</a></li>
+                    	<li><a th:href="@{/admin/menu}">MENU</a></li>
                     	<li><a th:href="@{/admin/storico}">STORICO ORDINI</a></li>
 	                  </ul>
 	                 <div class="btn-group">
