--- a/src/main/resources/templates/suppli.html
+++ b/src/main/resources/templates/suppli.html
@@ -1,10 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	
-	<head  th:replace="fragments/base.html :: headerfiles(title='suppli')">  
-		<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-	  	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-	  	<script src="https://kit.fontawesome.com/ced3f913ea.js" crossorigin="anonymous"></script>
-	</head>
+	<head  th:replace="fragments/base.html :: headerfiles(title='suppli')"> </head>
     
     <body>
     
@@ -21,12 +17,13 @@
 			<div>
 				<div class="introduzione">
 					<div class="titolo">
-						<h3>Eppure… noi lo sappiamo e lo sapete anche voi: la vera star del nostro bancone è lui, il supplì.</h3>
+						<h3>Eppure… noi lo sappiamo e lo sapete anche voi: </h3>
 					</div>
-					<br><hr><br>
-					<p>Una panatura sottile e croccante, un ripieno di riso al ragù con un sugo corposo e appena acidulo e un cuore di mozzarella calda e filante:</p>
-					<p>vi consigliamo di gustarlo appena fatto, quando scotta ancora e gli ingredienti tutti insieme emanano un profumo che è una sinfonia.</p>
-					<p>Passate da noi e vi possiamo giurare che dimenticherete gli incubi causati dai minuscoli supplì surgelati che avete trovato altrove.</p>
+					<br><hr style="background-color: white;"><br>
+					<p>la vera star del nostro bancone è lui, il <span style="font-weight: bold;">supplì</span>.</p>
+					Una panatura sottile e croccante, un ripieno di riso al ragù con un sugo corposo e appena acidulo e un cuore di mozzarella calda e filante,
+					vi consigliamo di gustarlo appena fatto, quando scotta ancora e gli ingredienti tutti insieme emanano un profumo che è una sinfonia.
+					Passate da noi e vi possiamo giurare che dimenticherete gli incubi causati dai minuscoli supplì surgelati che avete trovato altrove.</p>
 					<br>
 					<h4>Da noi, il supplì è una cosa seria, serissima.</h4>
 					<br>
@@ -36,7 +33,7 @@
 				</div>
 				<div class="storia">
 					<h3>Breve storia</h4>
-					<br><hr><br>
+					<br><hr style="background-color: black;"><br>
 					<p>Se ne comincia a parlare nella seconda metà dell’Ottocento: Roma era straripante di soldati napoleonici,</p>
 					<p>che assaggiata la specialità iniziarono a definirla <b>surprise</b>,</p>
 					<p>perché dentro quella rossa polpetta di riso scoprivano la mozzarella bianca e filante.</p>
@@ -45,7 +42,7 @@
 				</div>
 				<div class="gustalo">
 					<h3>Venite a gustarlo!</h3>
-					<br><hr><br>
+					<br><hr style="background-color: black;"><br>
 					<p>Da Pizza Revolution potete gustare il vero supplì al telefono,</p>
 					<p><b><i>quando lo spezzate in due un filo bianco di mozzarella terrà unite le cornette.</i></b></p>
 					<p>Mangiatelo tenendolo in un tovagliolino e non provate nemmeno a chiederci un coltello e una forchetta,</p>
