--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -3,7 +3,7 @@ body{
 	 overflow: hidden!important;
 }
 
-.wrapper{
+header{
 	position: relative;
 }
 
@@ -131,45 +131,44 @@ body{
   transform: translateY(-2px);
 }
 
-table {
-	margin-top: 70px;
-	 margin-left:auto;
-	 margin-right: auto;
-  width: 50%;
-  empty-cells: hide;
-} 
 
-.tabella a{
-	text-decoration: none;
-	color: black;
-}
 
-.tabella .blank{
-	background-color: transparent;
-	
-}
 
-th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  background-color: #04AA6D;
-  color: white;
-}
-tr{
-	background-color: #cfc9c9;
-}
+
 .pointer{
 	cursor: pointer;
 }
-th, td {
-	font-size: 18px;
-  text-align: center;
-}
- tr:hover {background-color: rgb(255, 255, 255);}
-tr:nth-child(even) {background-color: aaa5a5;}
 
 @media (min-width: 768px) {
   .bt1 {
     padding: 10px 30px;
   }
+}
+.space{
+	width: 100%;
+	height: 160px;
+}
+.table {
+     width: 100%;
+     max-width: 100%;
+     margin-bottom: 1rem;
+     background-color: transparent
+ }
+
+ .table thead th{
+     border-top: 0;
+     border-bottom-width: 1px;
+     font-weight: 500;
+     font-size: .875rem;
+     text-transform: uppercase
+ }
+
+ .table td {
+     font-size: 0.875rem;
+     padding: .875rem 0.9375rem
+ }
+.table-div{
+	margin: auto
+	;
+	width: 80%;
 }
