--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -286,7 +286,7 @@ p{
 .line {
     width: 100%;
     height: 5px;
-    background-color: black;
+    background-color: rgb(255, 123, 0);;
     border-radius: 50%;
 }
 .first .img {
@@ -932,6 +932,7 @@ header {
 }
 .area .introduzione{
 	text-align: left;
+	    border-radius: 65px;
     font-size: 17px;
     padding: 4%;
     padding-left: 15%;
@@ -943,19 +944,22 @@ header {
 
 	text-align: left;
     font-size: 18px;
-    padding: 4%;
-    padding-left: 15%;
-    padding-right: 15%;
-    background-color: orange;
-    color: black;
-}
-.area .gustalo{
-	text-align: left;
-    font-size: 18px;
+        border-radius: 65px;
     padding: 4%;
     padding-left: 15%;
     padding-right: 15%;
     background-color: white;
+    color: black;
+}
+.area .gustalo{
+	text-align: left;
+	    border-radius: 65px;
+    font-size: 18px;
+    padding: 4%;
+    padding-left: 15%;
+    padding-right: 15%;
+     background-color: orange;
+    
     color: black;
     /* border: 3px solid brown; */
 }  
